--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,10 @@ h2{
     margin-top: 20px;
 }
 
+.age-popup {
+    background: url('/images/casino-bg.png') center/cover;
+}
+
 .backdrop-blur {
     backdrop-filter: blur(8px);
 }
